added some settings for areas

--- a/src/main/resources/assets/toomanyplayers/lang/en_us.json
+++ b/src/main/resources/assets/toomanyplayers/lang/en_us.json
@@ -1,12 +1,17 @@
 {
   "toomanyplayers.midnightconfig.hidePlayersdistance": "Min. distance for hiding players: ",
   "toomanyplayers.midnightconfig.hidePlayers": "Hiding players",
+  "toomanyplayers.midnightconfig.areasHidePlayers": "Hiding players",
   "toomanyplayers.midnightconfig.showOnlyHeads": "Displaying only heads",
+  "toomanyplayers.midnightconfig.areasShowOnlyHeads": "Displaying only heads",
   "toomanyplayers.midnightconfig.hideArmor": "Hiding armor",
+  "toomanyplayers.midnightconfig.areasHideArmor": "Hiding armor",
   "toomanyplayers.midnightconfig.hideHeldItems": "Hiding held items",
+  "toomanyplayers.midnightconfig.areasHideHeldItems": "Hiding held items",
   "toomanyplayers.midnightconfig.hideGlint": "Hiding item glint",
   "toomanyplayers.midnightconfig.hide2ndLayer": "Hiding players' second layer",
-  "toomanyplayers.midnightconfig.saveToMemory": "Turn off the optimization switch after restarting the game: ",
+  "toomanyplayers.midnightconfig.areasHide2ndLayer": "Hiding players' second layer",
+  "toomanyplayers.midnightconfig.saveToMemory": "Turn off the mod after restarting the game: ",
   "toomanyplayers.midnightconfig.enum.savingTypes.NOT_TOGGLEMOD": "Turn off",
   "toomanyplayers.midnightconfig.enum.savingTypes.ALL": "Save",
   "toomanyplayers.midnightconfig.whitelist": "Whitelist: ",
@@ -19,11 +24,11 @@
   "toomanyplayers.midnightconfig.mainSettings": "§l§nMain settings",
   "toomanyplayers.midnightconfig.lists": "§l§nLists of players",
   "toomanyplayers.midnightconfig.areas": "§l§nHiding Areas",
-  "toomanyplayers.midnightconfig.toggleMod": "Enable optimization",
-  "toomanyplayers.midnightconfig.firstArea": "(Optimization is off)",
-  "toomanyplayers.midnightconfig.secondArea": "(The armor and the second layer are hidden)",
-  "toomanyplayers.midnightconfig.thirdArea": "(Only the heads are visible)",
-  "toomanyplayers.midnightconfig.otherArea": "(Beyond the third radius, the players are completely hidden.)",
+  "toomanyplayers.midnightconfig.toggleMod": "Enable mod",
+  "toomanyplayers.midnightconfig.firstArea": "§nFirst Area (optimization is off)",
+  "toomanyplayers.midnightconfig.secondArea": "§nSecond Area",
+  "toomanyplayers.midnightconfig.thirdArea": "§nThird Area",
+  "toomanyplayers.midnightconfig.otherArea": "§nBeyond the third Area",
   "toomanyplayers.midnightconfig.blockingType": "Player blocking type",
   "toomanyplayers.midnightconfig.enum.BlockingType.KEEP_HEADS": "Heads only",
   "toomanyplayers.midnightconfig.enum.BlockingType.ALL": "Hide fully",
