--- a/src/main/resources/assets/toomanyplayers/lang/ru_ru.json
+++ b/src/main/resources/assets/toomanyplayers/lang/ru_ru.json
@@ -1,12 +1,17 @@
 {
   "toomanyplayers.midnightconfig.hidePlayersdistance": "Минимальная дистанция для скрытия игроков: ",
   "toomanyplayers.midnightconfig.hidePlayers": "Скрытие игроков",
+  "toomanyplayers.midnightconfig.areasHidePlayers": "Скрытие игроков",
   "toomanyplayers.midnightconfig.showOnlyHeads": "Отображение только голов игроков",
+  "toomanyplayers.midnightconfig.areasShowOnlyHeads": "Отображение только голов игроков",
   "toomanyplayers.midnightconfig.hideArmor": "Скрытие брони",
+  "toomanyplayers.midnightconfig.areasHideArmor": "Скрытие брони",
   "toomanyplayers.midnightconfig.hideHeldItems": "Скрытие предметов в руках",
+  "toomanyplayers.midnightconfig.areasHideHeldItems": "Скрытие предметов в руках",
   "toomanyplayers.midnightconfig.hideGlint": "Глобальное скрытие эффекта зачарования",
   "toomanyplayers.midnightconfig.hide2ndLayer": "Скрытие второго слоя игроков",
-  "toomanyplayers.midnightconfig.saveToMemory": "Выключать оптимизацию после перезапуска игры: ",
+  "toomanyplayers.midnightconfig.areasHide2ndLayer": "Скрытие второго слоя игроков",
+  "toomanyplayers.midnightconfig.saveToMemory": "Выключать мод после перезапуска игры: ",
   "toomanyplayers.midnightconfig.enum.savingTypes.NOT_TOGGLEMOD": "Выключать",
   "toomanyplayers.midnightconfig.enum.savingTypes.ALL": "Сохранять",
   "toomanyplayers.midnightconfig.whitelist": "Вайтлист: ",
@@ -49,10 +54,10 @@
   "toomanyplayers.midnightconfig.toggleMod": "Включить мод",
   "key.toomanyplayers.toggleMod": "Включить мод",
   "key.toomanyplayers.fastMenu": "Открыть меню взаимодействия с игроком",
-  "toomanyplayers.midnightconfig.firstArea": "(Оптимизация выключена)",
-  "toomanyplayers.midnightconfig.secondArea": "(Скрыты броня и второй слой)",
-  "toomanyplayers.midnightconfig.thirdArea": "(Видно только головы)",
-  "toomanyplayers.midnightconfig.otherArea": "(Дальше третьего радиуса игроки полностью скрыты)",
+  "toomanyplayers.midnightconfig.firstArea": "§nПервая область (оптимизация выключена)",
+  "toomanyplayers.midnightconfig.secondArea": "§nВторая область",
+  "toomanyplayers.midnightconfig.thirdArea": "§nТретья область",
+  "toomanyplayers.midnightconfig.otherArea": "§nДальше третьей области",
   "toomanyplayers.midnightconfig.blockingType": "Тип блокировки игрока",
   "toomanyplayers.midnightconfig.enum.BlockingType.KEEP_HEADS": "Только голова",
   "toomanyplayers.midnightconfig.enum.BlockingType.ALL": "Скрыть полностью",
