--- a/src/main/resources/assets/toomanyplayers/lang/ru_ru.json
+++ b/src/main/resources/assets/toomanyplayers/lang/ru_ru.json
@@ -66,7 +66,7 @@
 
   "toomanyplayers.midnightconfig.toggleOnlineWhitelist": "Включить онлайн вайтлист",
   "toomanyplayers.midnightconfig.onlineWhitelistUrl": "Ссылка на онлайн вайтлист",
-  "toomanyplayers.midnightconfig.openConfigKey": "Открыть меню конфига",
+  "key.toomanyplayers.openConfigKey": "Открыть меню конфига",
   "key.toomanyplayers.toggleOnlineWhitelist": "Включить онлайн вайтлист",
   "toomanyplayers.preset.create": "Пресет был успешно создан на основе текущих настроек",
   "toomanyplayers.preset.remove.success": "Пресет был успешно удалён",
